# graphics_engine

./: .gitignore  LICENSE  MANIFEST.in  README.md  cartoon_explanation.pse  impostor_sticks.pse  install.sh  pyproject.toml  setup.py  vismol_setup.py
VisMol/: VisMolConfig.json  Vismol.sublime-workspace  __main__.py  simple3.py
VisMol/GTKGUI/: #MainWindow.glade#  MainWindow.glade~  MainWindow_vismol.glade~  VismolMain.py
VisMol/glCore/: VisMolGLCore.py  VismolFont.py  VismolGLCore.py  setup.py  vismol_font.py
VisMol/glWidget/: VismolGLWidget.py
VisMol/vBabel/: AMBERFiles.py  AUXFiles.py  MOL2Files.py  PDBFiles.pyx  PSFFiles.py  XYZFiles.py  setup.py
VisMol/vCore/: VismolSelections.py  VismolSession.py  vConfig.py
VisMol/vModel/: Atom.py  Chain.py  MolecularProperties.py  Representations.py  Residue.py  VismolObject.py  setup.py
gl_2D/: __ini__.py  __main__.py
gl_2D/libs/: camera.py  gtk_stuff.py  objects.py  parsers.py  vaos.py
gl_2D/shaders/: shaders.py
gl_3D/: frag.frag  points.ply  vertex.vert
libs/: objects.py
scripts/: Vismol_simple.py  __init__.py  vismol_simple_local_installation.py
src/vismol/: __main__.py
vismol/: __init__.py  __main__.py  simple.py
vismol/core/: vismol_config.py  vismol_object.py  vismol_selections.py  vismol_session.py
vismol/gui/: MainWindow.glade  vismol_gtkwidget.py  vismol_main.py  vismol_tools.py  vismol_widget.py
vismol/libgl/: dynamic_line.py  glaxis.py  glcamera.py  representations.py  selection_box.py  shapes.py  vismol_font.py  vismol_glcore.py
vismol/model/: AtomTypes.py  Vectors.py  atom.py  bond.py  cartoon.py  chain.py  molecular_properties.py  representations.py  residue.py
vismol/utils/: AMBERFiles.py  AUXFiles.py  GROFiles.pyx  NewObj.py  PDBFiles.pyx  PSFFiles.py  XYZFiles.py  c_distances.pyx  cartoon.pyx  cartoon_BCK.py  matrix_operations.pyx  parser.py  (+1 more)
(+95 files in other folders)
