# vismol.toml

[build-system]
requires = ["setuptools>=40.0"]
build-backend = "setuptools.build_meta"

[project]
name = "vismol"
version = "0.0.1"
authors = [
    { "name" = "Carlos Eduardo Sequeiros Borja", email = "casebor@gmail.com" },
    { "name" = "José Fernando Ruggiero Bachega", email = "ferbachega@gmail.com" }
]
description = "A molecular viewer library using modern OpenGL"
readme = "README.md"
license = { file = "LICENSE" }
dependencies = [
    "numpy>=1.20.0",
    "Cython>=0.29.12",
    "PyOpenGL>=3.1.0"
]
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: Unix",
]

[project.urls]
"Homepage" = "https://github.com/casebor/graphics_engines"
"Bug Tracker" = "https://github.com/casebor/graphics_engines/issues"